Footer FOLLOW US align correction

--- a/my-react-app/src/Components/Footer/Footer.css
+++ b/my-react-app/src/Components/Footer/Footer.css
@@ -165,8 +165,8 @@
   
   .social-media h3{
     align-items: center;
-    padding-left: 30px;
-    margin-left: 10px;
+    padding-left: 5px;
+    margin-left: 5px;
   }
   .social-media img{
     height: 70px;
